--- a/Capstone02/appsettings.json
+++ b/Capstone02/appsettings.json
@@ -1,13 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-DDJU1TE\\SQLEXPRESS;Database=PTAFeeDB;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PTAConnection": "Server=MSUMSU-0DN0BDQK\\SQLEXPRESS;Database=PTAFeeDB;Trusted_Connection=True;;MultipleActiveResultSets=True;TrustServerCertificate=True;",
-    "Capstone02ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Capstone02;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
