Layout (Inject Manger)

--- a/Capstone02/appsettings.json
+++ b/Capstone02/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DDJU1TE\\SQLEXPRESS;Database=PTAFeeDB;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=MSUMSU-0DN0BDQK\\SQLEXPRESS;Database=PTAFeeDB;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
