--- a/Capstone02/appsettings.json
+++ b/Capstone02/appsettings.json
@@ -1,8 +1,8 @@
 
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=MSUMSU-0DN0BDQK\\SQLEXPRESS;Database=PTAFeeDB;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=MSUMSU-68T8SU07;Database=PTAFeeDB;Trusted_Connection=True;Encrypt=False;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
